Bug 373924 - Windows gcc build failure caused by missing <GLES2/gl2.h>
Summary: Windows gcc build failure caused by missing <GLES2/gl2.h>
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: frameworks5
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL: https://build.opensuse.org/package/sh...
Keywords:
Depends on:
Blocks: 373932
  Show dependency treegraph
 
Reported: 2016-12-19 23:04 UTC by Ralf Habacker
Modified: 2016-12-20 00:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-12-19 23:04:32 UTC
[  168s] [  9%] Building CXX object umbrello/CMakeFiles/libumbrello.dir/dialogs/codeeditor.cpp.obj
[  168s] cd /home/abuild/rpmbuild/BUILD/umbrello-2.21.70.93561d6/build/umbrello && /usr/bin/i686-w64-mingw32-g++   -DCMAKE_BINARY_DIR=\"/home/abuild/rpmbuild/BUILD/umbrello-2.21.70.93561d6/build\" -DENABLE_NEW_CODE_GENERATORS -DENABLE_UML_OBJECTS_WINDOW -DENABLE_WIDGET_SHOW_DOC -DENABLE_XMIRESOLUTION -DKCOREADDONS_LIB -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_SIGNAL_SLOTS_KEYWORDS -DQT_NO_URL_CAST_FROM_STRING -DQT_PRINTSUPPORT_LIB -DQT_SVG_LIB -DQT_WEBKITWIDGETS_LIB -DQT_WEBKIT_LIB -DQT_WIDGETS_LIB -DQT_XML_LIB -DUMBRELLO_VERSION_STRING=\"2.21.70\" -DUNICODE -DWIN32_LEAN_AND_MEAN -DWINVER=0x0600 -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D_UNICODE -D_USE_MATH_DEFINES -D_WIN32_IE=0x0600 -D_WIN32_WINNT=0x0600 @CMakeFiles/libumbrello.dir/includes_CXX.rsp -fmessage-length=0 -grecord-gcc-switches -O2 -Wall -D_FORTIFY_SOURCE=2 -fstack-protector -funwind-tables -fasynchronous-unwind-tables -DNDEBUG -fno-stack-protector -std=c++0x -fno-exceptions -Wall -Wextra -Wcast-align -Wchar-subscripts -Wformat-security -Wno-long-long -Wpointer-arith -Wundef -Wnon-virtual-dtor -Woverloaded-virtual -Werror=return-type -fvisibility=hidden -fno-keep-inline-dllexport   -o CMakeFiles/libumbrello.dir/dialogs/codeeditor.cpp.obj -c /home/abuild/rpmbuild/BUILD/umbrello-2.21.70.93561d6/umbrello/dialogs/codeeditor.cpp
[  169s] In file included from /usr/i686-w64-mingw32/sys-root/mingw/include/qt5/QtGui/qopenglcontext.h:54:0,
[  169s]                  from /usr/i686-w64-mingw32/sys-root/mingw/include/qt5/QtGui/QtGui:32,
[  169s]                  from /usr/i686-w64-mingw32/sys-root/mingw/include/qt5/QtWidgets/QtWidgetsDepends:4,
[  169s]                  from /usr/i686-w64-mingw32/sys-root/mingw/include/qt5/QtWidgets/QtWidgets:3,
[  169s]                  from /home/abuild/rpmbuild/BUILD/umbrello-2.21.70.93561d6/umbrello/dialogs/widgets/umltypemodifierwidget.h:4,
[  169s]                  from /home/abuild/rpmbuild/BUILD/umbrello-2.21.70.93561d6/build/umbrello/ui_umlattributedialog.h:30,
[  169s]                  from /home/abuild/rpmbuild/BUILD/umbrello-2.21.70.93561d6/umbrello/dialogs/umlattributedialog.h:16,
[  169s]                  from /home/abuild/rpmbuild/BUILD/umbrello-2.21.70.93561d6/umbrello/dialogs/codeeditor.cpp:34:
[  169s] /usr/i686-w64-mingw32/sys-root/mingw/include/qt5/QtGui/qopengl.h:99:26: fatal error: GLES2/gl2.h: No such file or directory
[  169s]  #   include <GLES2/gl2.h>
[  169s]                           ^
[  169s] compilation terminated.
Comment 1 Ralf Habacker 2016-12-19 23:19:19 UTC
Git commit ff40b447de0d9b5ac271ab56909cca8b5485df87 by Ralf Habacker.
Committed on 19/12/2016 at 23:17.
Pushed by habacker into branch 'frameworks'.

Fix 'Windows gcc build failure caused by missing <GLES2/gl2.h>'

M  +4    -1    umbrello/dialogs/widgets/umltypemodifierwidget.h
M  +3    -1    umbrello/dialogs/widgets/umltypequalifierswidget.h

https://commits.kde.org/umbrello/ff40b447de0d9b5ac271ab56909cca8b5485df87