Fix 'Windows gcc build failure caused by missing <GLES2/gl2.h>'

BUG:373924